--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -116,3 +116,14 @@ main {
     font-size: 20px;
     color: #474747;
 }
+/* What i do styles */
+.What-i-do{
+    margin-top: 130px;
+}
+.skills-container{
+    display: flex;
+}
+.sikll-title{
+    font-weight: 700;
+    font-size: 20px;
+}
