--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -79,6 +79,9 @@ main {
 }
 
 /* about section styles */
+section{
+    margin-top: 130px;
+}
 .about {
     text-align: center;
     margin-top: 130px;
@@ -88,8 +91,8 @@ main {
 }
 
 .section-title {
-    
-    margin-bottom: 30px;
+    text-align: center;
+    margin-bottom: 50px;
     font-weight: 700;
     font-size: 35px;
 
@@ -117,13 +120,27 @@ main {
     color: #474747;
 }
 /* What i do styles */
-.What-i-do{
-    margin-top: 130px;
-}
+
 .skills-container{
     display: flex;
+    gap: 24px;
 }
 .sikll-title{
     font-weight: 700;
     font-size: 20px;
+    margin-top: 25px;
+    margin-bottom: 15px;
 }
+.skill{
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0,0,0,0.06);
+    border-radius: 5px;
+    padding: 30px;
+
+}
+
+.skill-description{
+    color: #757575;
+    
+}
+/* Resume styles */
