--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -173,3 +173,22 @@ section{
     margin-top: 50px;
     text-align: center;
 }
+/* contact styles */
+.contact{
+    display: flex;
+    gap: 100px;
+    background-color: #fff8f3;
+    padding: 130px 200px;
+}
+.section-title{
+    text-align: left;
+}
+.contact input[type="text"],input[type="email"],textarea{
+    margin-bottom: 24px;
+    border: 0;
+    width: 100%;
+    padding: 18px 30px;
+}
+.contact a{
+    text-decoration: none;
+}
