--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -44,7 +44,7 @@ nav li {
 nav {
     display: flex;
     justify-content: space-between;
-    margin: 50px 200px;
+    padding: 50px 200px;
 }
 
 /* banner styles */
